# url-shortener

./: .gitignore  README.md  deploy.py  design.md  docker-compose.yml  openapi.yml  pyproject.toml  sequence-diagram.md
app/: handler.py  local.py  main.py  url_shortener.py
tests/: test_url_shortener.py
